test/errors/expr_dictcomp_invalid_target.py
{str(y - 1): x + y for x in range(20) for +y in range(3)}
